option('gtk-doc', type : 'boolean', value : false)
option('gtk-doc-html', type : 'boolean', value : true)
option('gtk-doc-pdf', type : 'boolean', value : false)

option('iconv', type : 'combo', choices : ['auto', 'builtin', 'system'], value : 'auto')
option('crypto', type : 'feature', value : 'enabled')
option('introspection', type : 'boolean', value : true)
option('vala', type : 'boolean', value : true)
